--- a/index.html
+++ b/index.html
@@ -1,7 +1,130 @@
 <!DOCTYPE html>
+
+<style>
+
+    body {
+        background-color: rgb(20,20,20);
+        font-family: monospace;
+
+        /* Resets the margin so browser css is ignored - Makes navigation bar tight to screen*/
+        margin: 0;
+    }
+
+
+    p
+    {
+        font-size: 16px;
+        color: white;
+    }
+    a
+    {
+        font-size: 16px;
+        color: blue;
+    }
+
+    /* Navigation bar styles*/
+    /* Add a black background color to the nav bar*/
+    .navbar
+    {
+        background-color: rgb(0,0,0);
+        overflow: hidden;
+        margin:0;
+        padding: 0;
+    }
+    /* Style the links inside the nav bar*/
+    .navbar a
+    {
+        font-family: monospace;
+        float: left;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+
+
+    }
+
+    .navbar a:hover 
+    {
+            background-color: rgb(128, 128, 128);
+            color: white;
+
+    }
+
+    .sticky
+    {
+        position: fixed;
+        top: 0;
+        width: 100%;
+    }
+</style>
+
 <html>
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <!-- Top navigation bar code-->
+    <div class="navbar">
+        <a href="#home-div">Home</a>
+        <a href="#projects-div">Projects</a>
+        <a href="#contact-div">Contact</a>
+        <a href="#about-div">About</a>
+    </div>
+
+    <!-- Home Page-->
+    <div id="home-div">
+        <p> Hi, I'm Jack Fletcher!</p>
+    </div>
+
+    <br />
+    <!-- Projects Page-->
+    <div id="projects-div">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur semper vel sapien vel rutrum. Mauris condimentum nulla dignissim aliquet dictum. Etiam pretium, nunc quis ullamcorper hendrerit, lectus orci mollis sem, id tristique neque dui id orci. Aliquam fermentum elementum felis quis pulvinar. Etiam in iaculis sem. Maecenas semper nec ipsum in accumsan. Praesent pretium tristique ante, tincidunt mattis ipsum iaculis quis. Vivamus sagittis tortor tortor, eget dapibus lectus maximus id. Quisque a nibh et purus varius rhoncus. In a tellus lorem. Proin posuere maximus euismod. Proin sit amet imperdiet ante. Vivamus pharetra erat odio, ut sollicitudin lectus aliquet at. Vestibulum vel libero non eros venenatis vulputate. Cras auctor posuere lorem a consequat. Vivamus eros dui, pharetra sed ultrices eget, rhoncus ac leo.
+        </p>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur semper vel sapien vel rutrum. Mauris condimentum nulla dignissim aliquet dictum. Etiam pretium, nunc quis ullamcorper hendrerit, lectus orci mollis sem, id tristique neque dui id orci. Aliquam fermentum elementum felis quis pulvinar. Etiam in iaculis sem. Maecenas semper nec ipsum in accumsan. Praesent pretium tristique ante, tincidunt mattis ipsum iaculis quis. Vivamus sagittis tortor tortor, eget dapibus lectus maximus id. Quisque a nibh et purus varius rhoncus. In a tellus lorem. Proin posuere maximus euismod. Proin sit amet imperdiet ante. Vivamus pharetra erat odio, ut sollicitudin lectus aliquet at. Vestibulum vel libero non eros venenatis vulputate. Cras auctor posuere lorem a consequat. Vivamus eros dui, pharetra sed ultrices eget, rhoncus ac leo.
+        </p>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur semper vel sapien vel rutrum. Mauris condimentum nulla dignissim aliquet dictum. Etiam pretium, nunc quis ullamcorper hendrerit, lectus orci mollis sem, id tristique neque dui id orci. Aliquam fermentum elementum felis quis pulvinar. Etiam in iaculis sem. Maecenas semper nec ipsum in accumsan. Praesent pretium tristique ante, tincidunt mattis ipsum iaculis quis. Vivamus sagittis tortor tortor, eget dapibus lectus maximus id. Quisque a nibh et purus varius rhoncus. In a tellus lorem. Proin posuere maximus euismod. Proin sit amet imperdiet ante. Vivamus pharetra erat odio, ut sollicitudin lectus aliquet at. Vestibulum vel libero non eros venenatis vulputate. Cras auctor posuere lorem a consequat. Vivamus eros dui, pharetra sed ultrices eget, rhoncus ac leo.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur semper vel sapien vel rutrum. Mauris condimentum nulla dignissim aliquet dictum. Etiam pretium, nunc quis ullamcorper hendrerit, lectus orci mollis sem, id tristique neque dui id orci. Aliquam fermentum elementum felis quis pulvinar. Etiam in iaculis sem. Maecenas semper nec ipsum in accumsan. Praesent pretium tristique ante, tincidunt mattis ipsum iaculis quis. Vivamus sagittis tortor tortor, eget dapibus lectus maximus id. Quisque a nibh et purus varius rhoncus. In a tellus lorem. Proin posuere maximus euismod. Proin sit amet imperdiet ante. Vivamus pharetra erat odio, ut sollicitudin lectus aliquet at. Vestibulum vel libero non eros venenatis vulputate. Cras auctor posuere lorem a consequat. Vivamus eros dui, pharetra sed ultrices eget, rhoncus ac leo.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur semper vel sapien vel rutrum. Mauris condimentum nulla dignissim aliquet dictum. Etiam pretium, nunc quis ullamcorper hendrerit, lectus orci mollis sem, id tristique neque dui id orci. Aliquam fermentum elementum felis quis pulvinar. Etiam in iaculis sem. Maecenas semper nec ipsum in accumsan. Praesent pretium tristique ante, tincidunt mattis ipsum iaculis quis. Vivamus sagittis tortor tortor, eget dapibus lectus maximus id. Quisque a nibh et purus varius rhoncus. In a tellus lorem. Proin posuere maximus euismod. Proin sit amet imperdiet ante. Vivamus pharetra erat odio, ut sollicitudin lectus aliquet at. Vestibulum vel libero non eros venenatis vulputate. Cras auctor posuere lorem a consequat. Vivamus eros dui, pharetra sed ultrices eget, rhoncus ac leo.
+        </p>
+    </div>
+    <br />
+
+    <!-- Contacts Page-->
+    <div id="contact-div">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur semper vel sapien vel rutrum. Mauris condimentum nulla dignissim aliquet dictum. Etiam pretium, nunc quis ullamcorper hendrerit, lectus orci mollis sem, id tristique neque dui id orci. Aliquam fermentum elementum felis quis pulvinar. Etiam in iaculis sem. Maecenas semper nec ipsum in accumsan. Praesent pretium tristique ante, tincidunt mattis ipsum iaculis quis. Vivamus sagittis tortor tortor, eget dapibus lectus maximus id. Quisque a nibh et purus varius rhoncus. In a tellus lorem. Proin posuere maximus euismod. Proin sit amet imperdiet ante. Vivamus pharetra erat odio, ut sollicitudin lectus aliquet at. Vestibulum vel libero non eros venenatis vulputate. Cras auctor posuere lorem a consequat. Vivamus eros dui, pharetra sed ultrices eget, rhoncus ac leo.
+        </p>
+    </div>
+    <br />
+
+    <!-- About Page-->
+    <div id="about-div">
+
+    </div>
 </body>
 </html>
+
+
+<script>
+    window.onscroll = function () { myFunction() };
+
+    var navbar = document.getElementById("navbar");
+    var sticky = navbar.offsetTop;
+
+    function myFunction() {
+        if (window.pageYOffset >= sticky) {
+            navbar.classList.add("sticky")
+        } else {
+            navbar.classList.remove("sticky");
+        }
+    }
+</script>
