Added bottom padding

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         color: white;
         background-color: rgb(20,20,20);
         font-family: monospace;
-        text-align:center;
+        text-align: center;
         /* Resets the margin so browser css is ignored - Makes navigation bar tight to screen*/
         width: 30%;
         height: auto;
         margin: auto;
         padding-top: 2%;
+        padding-bottom: 2%;
     }
 
     h1
