--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
         height: auto;
         margin: auto;
         padding-top: 2%;
+        padding-bottom: 2%;
     }
 
     h1 {
@@ -62,6 +63,12 @@
         background-color: rgb(95, 95, 95);
         border: 1px solid grey;
     }
+
+    iframe
+    {
+        width: 80%;
+        height: 30%;
+    }
 </style>
 
 <html>
@@ -86,7 +93,7 @@
         <h2>
             Plymouth Energy Community Damp and Mould Application (C#)
         </h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/peUFRWXIwuk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/peUFRWXIwuk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <h2>What did I do?</h2>
         <ul>
@@ -100,7 +107,7 @@
         <h2>
             Highway Hero (C#)
         </h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/XqZYr33nLRY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/XqZYr33nLRY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <h2>What did I do?</h2>
         <ul>
@@ -115,7 +122,7 @@
         <h2>
             Dhelve (C#)
         </h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/fFcQS0qFXKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/fFcQS0qFXKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h2>What did I do?</h2>
         <ul>
             <li> Developed persistent data storage for coins/items</li>
