Cleaned up pages, made styles.css for consistent and easy to change css

--- a/discord.html
+++ b/discord.html
@@ -1,1 +1,3 @@
+<!DOCTYPE html>
+
 <iframe src="https://discordapp.com/widget?id=610917605825445900&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
