--- a/about.html
+++ b/about.html
@@ -1,71 +1,11 @@
-<style>
-
-    body {
-        font-size: 16px;
-        color: white;
-        background-color: rgb(20,20,20);
-        font-family: monospace;
-        text-align: center;
-        /* Resets the margin so browser css is ignored - Makes navigation bar tight to screen*/
-        margin: 0;
-        width: 30%;
-        height: auto;
-        margin: auto;
-        padding-top: 2%;
-        padding-bottom: 2%;
-    }
-
-    h1 {
-    }
-
-    p {
-    }
-
-    a {
-        font-size: 16px;
-        color: blue;
-    }
-
-    ul {
-        text-align: left;
-    }
-    /* Navigation bar styles*/
-    /* Add a black background color to the nav bar*/
-    .navbar {
-        background-color: rgb(0,0,0);
-        overflow: hidden;
-        margin: 0;
-        padding: 0;
-    }
-        /* Style the links inside the nav bar*/
-        .navbar a {
-            font-family: monospace;
-            float: left;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-        }
-
-            .navbar a:hover {
-                background-color: rgb(128, 128, 128);
-                color: white;
-            }
-
-    .sticky {
-        position: fixed;
-        top: 0;
-        width: 100%;
-    }
-
-    .boxed {
-        background-color: rgb(95, 95, 95);
-        border: 1px solid grey;
-    }
-</style>
+<!DOCTYPE html>
 
 <html>
+
+<head>
+    <link rel='stylesheet' type='text/css' href='styles.css' />
+</head>
+
 <body class="">
     <div class="boxed">
 
@@ -89,23 +29,9 @@
                 I love tinkering with different ideas to see how they work, and I can guarantee I'll get excited for any idea you give to me.
                 One of my passion projects involves creating a Discord bot for a small community that's used semi regularly, including an sql database for daily coins/interaction. I enjoy building computers, having built the last three I own, and several for friends and family.
             </p>
+            <br />
         </div>
-        </div>
+    </div>
 </body>
 </html>
 
-
-<script>
-    window.onscroll = function () { myFunction() };
-
-    var navbar = document.getElementById("navbar");
-    var sticky = navbar.offsetTop;
-
-    function myFunction() {
-        if (window.pageYOffset >= sticky) {
-            navbar.classList.add("sticky")
-        } else {
-            navbar.classList.remove("sticky");
-        }
-    }
-</script>
