--- a/contact.html
+++ b/contact.html
@@ -1,71 +1,11 @@
-<style>
-
-    body {
-        font-size: 16px;
-        color: white;
-        background-color: rgb(20,20,20);
-        font-family: monospace;
-        text-align: center;
-        /* Resets the margin so browser css is ignored - Makes navigation bar tight to screen*/
-        margin: 0;
-        width: 30%;
-        height: auto;
-        margin: auto;
-        padding-top: 2%;
-        padding-bottom: 2%;
-    }
-
-    h1 {
-    }
-
-    p {
-    }
-
-    a {
-        font-size: 16px;
-        color: blue;
-    }
-
-    ul {
-        text-align: left;
-    }
-    /* Navigation bar styles*/
-    /* Add a black background color to the nav bar*/
-    .navbar {
-        background-color: rgb(0,0,0);
-        overflow: hidden;
-        margin: 0;
-        padding: 0;
-    }
-        /* Style the links inside the nav bar*/
-        .navbar a {
-            font-family: monospace;
-            float: left;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-        }
-
-            .navbar a:hover {
-                background-color: rgb(128, 128, 128);
-                color: white;
-            }
-
-    .sticky {
-        position: fixed;
-        top: 0;
-        width: 100%;
-    }
-
-    .boxed {
-        background-color: rgb(95, 95, 95);
-        border: 1px solid grey;
-    }
-</style>
+<!DOCTYPE html>
 
 <html>
+
+<head>
+    <link rel='stylesheet' type='text/css' href='styles.css' />
+</head>
+
 <body class="">
     <div class="boxed">
 
@@ -109,25 +49,12 @@
 
                 <input type="submit" value="Send" />
                 <input type="reset" value="Reset" />
+
             </form>
         </div>
-        </div>
-        <br />
+        <!-- End Contacts Page-->
+    </div>
+    <br />
 </body>
 </html>
 
-
-<script>
-    window.onscroll = function () { myFunction() };
-
-    var navbar = document.getElementById("navbar");
-    var sticky = navbar.offsetTop;
-
-    function myFunction() {
-        if (window.pageYOffset >= sticky) {
-            navbar.classList.add("sticky")
-        } else {
-            navbar.classList.remove("sticky");
-        }
-    }
-</script>
