--- a/projects.html
+++ b/projects.html
@@ -1,158 +1,92 @@
-<style>
-
-    body {
-        font-size: 16px;
-        color: white;
-        background-color: rgb(20,20,20);
-        font-family: monospace;
-        text-align: center;
-        /* Resets the margin so browser css is ignored - Makes navigation bar tight to screen*/
-        margin: 0;
-        width: 30%;
-        height: auto;
-        margin: auto;
-        padding-top: 2%;
-        padding-bottom: 2%;
-    }
-
-    h1 {
-    }
-
-    p {
-    }
-
-    a {
-        font-size: 16px;
-        color: blue;
-    }
-
-    ul {
-        text-align: left;
-    }
-    /* Navigation bar styles*/
-    /* Add a black background color to the nav bar*/
-    .navbar {
-        background-color: rgb(0,0,0);
-        overflow: hidden;
-        margin: 0;
-        padding: 0;
-    }
-        /* Style the links inside the nav bar*/
-        .navbar a {
-            font-family: monospace;
-            float: left;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-        }
-
-            .navbar a:hover {
-                background-color: rgb(128, 128, 128);
-                color: white;
-            }
-
-    .sticky {
-        position: fixed;
-        top: 0;
-        width: 100%;
-    }
-
-    .boxed {
-        background-color: rgb(95, 95, 95);
-        border: 1px solid grey;
-    }
-
-    iframe
-    {
-        width: 80%;
-        height: 30%;
-    }
-</style>
+<!DOCTYPE html>
 
 <html>
+
+<head>
+    <link rel='stylesheet' type='text/css' href='styles.css' />
+</head>
+
 <body class="">
     <div class="boxed">
-    <!-- Top navigation bar code-->
-    <div class="navbar">
-        <!--<a href="#home-div">Home</a>
-        <a href="#projects-div">Projects</a>
-        <a href="#about-div">About</a>-->
-        <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
-        <a href="about.html">About</a>
-        <a href="https://docs.google.com/document/d/1i5CHPTLoUeXdabAKHejeOzc8EcxaCZQhpd3zIt7ptcw/edit?usp=sharing">CV</a>
-        <a href="contact.html">Contact</a>
+        <!-- Top navigation bar code-->
+        <div class="navbar">
+            <!--<a href="#home-div">Home</a>
+            <a href="#projects-div">Projects</a>
+            <a href="#about-div">About</a>-->
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="about.html">About</a>
+            <a href="https://docs.google.com/document/d/1i5CHPTLoUeXdabAKHejeOzc8EcxaCZQhpd3zIt7ptcw/edit?usp=sharing">CV</a>
+            <a href="contact.html">Contact</a>
+        </div>
+
+
+        <!-- Projects Page-->
+        <div id="projects-div">
+            <h1> Projects </h1>
+            <h2 id="PEC_App">
+                Plymouth Energy Community Damp and Mould Application (C#)
+            </h2>
+            <div id="outer">
+                <div id="inner">
+                    <iframe src="https://www.youtube.com/embed/peUFRWXIwuk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <h2>What did I do?</h2>
+            <ul>
+                <li> UI Design and creation within the Unity Game Engine</li>
+                <li> Lead scrums as the project lead/product owner</li>
+                <li> Code Review for the team using Git</li>
+            </ul>
+            <h3> What was it? </h3>
+            <p> The Damp and Mould application was a project developed within the Unity engine, given to us by Plymouth Energy Community, in order to make it easier to get information to homeowners who may be struggling with damp and mould within their home. It was meant to be used as an aid while visiting these people, who may learn better from a visual representation of the issues that their actions or inactions may cause. Colours and fonts were reused from the clients own website, to provide a fluid and consistent approach.</p>
+
+            <h2 id="Highway_Hero">
+                Highway Hero (C#)
+            </h2>
+
+            <div id="outer">
+                <div id="inner">
+                    <iframe src="https://www.youtube.com/embed/XqZYr33nLRY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <h2>What did I do?</h2>
+            <ul>
+                <li> Developed persistent data storage for coins/purchased cars</li>
+                <li> Created a basic character stats system</li>
+                <li> Created a movement system for the game in the style of endless runners such as Temple Run</li>
+
+            </ul>
+            <h3> What was it? </h3>
+            <p> An endless runner developed in 3 months as my first introduction to 3D game development within the Unity Engine. It featured endless gameplay, getting progressively more difficult, persistent data storage and a set of cars with different character stats. </p>
+
+            <h2 id="Dhelve">
+                Dhelve (C#)
+            </h2>
+
+            <div id="outer">
+                <div id="inner">
+                    <iframe src="https://www.youtube.com/embed/fFcQS0qFXKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <h2>What did I do?</h2>
+            <ul>
+                <li> Developed persistent data storage for coins/items</li>
+                <li> Created a basic RPG character stats system, including levels, experience and stats</li>
+                <li> Created a movement system</li>
+                <li> Carried out user testing</li>
+                <li> Created supporting documents - Standard Operating Procedures, Technical Document, Design Document, Risk Assessment</li>
+                <li> Admin'd the github repo - Dealt with any merge conflicts and did all code review</li>
+                <li> Created a basic character controller</li>
+
+            </ul>
+            <h3> What was it? </h3>
+            <p> A procedurally generated dungeon crawler, created in three months as part of a team of two. It featured an inventory system, with a shop for purchaseable items and monster drop tables, with a fully-fledged character stats system for unlimited replayability.   </p>
+        </div>
+        <!-- End Projects page-->
     </div>
-
-
-    <!-- Projects Page-->
-    <div id="projects-div">
-        <h1> Projects </h1>
-        <h2>
-            Plymouth Energy Community Damp and Mould Application (C#)
-        </h2>
-        <iframe src="https://www.youtube.com/embed/peUFRWXIwuk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-        <h2>What did I do?</h2>
-        <ul>
-            <li> UI Design and creation within the Unity Game Engine</li>
-            <li> Lead scrums as the project lead/product owner</li>
-            <li> Code Review for the team using Git</li>
-        </ul>
-        <h3> What was it? </h3>
-        <p> The Damp and Mould application was a project developed within the Unity engine, given to us by Plymouth Energy Community, in order to make it easier to get information to homeowners who may be struggling with damp and mould within their home. It was meant to be used as an aid while visiting these people, who may learn better from a visual representation of the issues that their actions or inactions may cause. Colours and fonts were reused from the clients own website, to provide a fluid and consistent approach.</p>
-
-        <h2>
-            Highway Hero (C#)
-        </h2>
-        <iframe src="https://www.youtube.com/embed/XqZYr33nLRY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-        <h2>What did I do?</h2>
-        <ul>
-            <li> Developed persistent data storage for coins/purchased cars</li>
-            <li> Created a basic character stats system</li>
-            <li> Created a movement system for the game in the style of endless runners such as Temple Run</li>
-
-        </ul>
-        <h3> What was it? </h3>
-        <p> An endless runner developed in 3 months as my first introduction to 3D game development within the Unity Engine. It featured endless gameplay, getting progressively more difficult, persistent data storage and a set of cars with different character stats. </p>
-
-        <h2>
-            Dhelve (C#)
-        </h2>
-        <iframe src="https://www.youtube.com/embed/fFcQS0qFXKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <h2>What did I do?</h2>
-        <ul>
-            <li> Developed persistent data storage for coins/items</li>
-            <li> Created a basic RPG character stats system, including levels, experience and stats</li>
-            <li> Created a movement system</li>
-            <li> Carried out user testing</li>
-            <li> Created supporting documents - Standard Operating Procedures, Technical Document, Design Document, Risk Assessment</li>
-            <li> Admin'd the github repo - Dealt with any merge conflicts and did all code review</li>
-            <li> Created a basic character controller</li>
-
-        </ul>
-        <h3> What was it? </h3>
-        <p> A procedurally generated dungeon crawler, created in three months as part of a team of two. It featured an inventory system, with a shop for purchaseable items and monster drop tables, with a fully-fledged character stats system for unlimited replayability.   </p>
-    </div>
-     </div>
 </body>
 </html>
-
-
-<script>
-    window.onscroll = function () { myFunction() };
-
-    var navbar = document.getElementById("navbar");
-    var sticky = navbar.offsetTop;
-
-    function myFunction() {
-        if (window.pageYOffset >= sticky) {
-            navbar.classList.add("sticky")
-        } else {
-            navbar.classList.remove("sticky");
-        }
-    }
-</script>
