Made anchor tags more user friendly

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div id="home-div">
                 <h1>Home</h1>
                 <p> Hi, I'm Jack Fletcher! This site's currently in progress, as I'm learning full-stack development through the Odin Project and Freecodecamp. I'm a third-year student at Plymouth University, Devon studying Computing & Games Development. I've recently created projects such as <a href="projects.html#Dhelve"> Dhelve</a>, 
-                  a procedurally generated dungeon crawler, <a href="projects.html#Highway_Hero"> Highway Hero </a> and have done client work for <a href="projects.html#PEC_App"> Plymouth Energy Community</a></p>
+                  a procedurally generated dungeon crawler, <a href="projects.html#Highway_Hero"> Highway Hero</a>, an endless runner, and have done client work for <a href="projects.html#PEC_App"> Plymouth Energy Community</a></p>
                 <br />
                 <p> My Current skills are:</p>
                 <ul>
