Changed the layout from a box to a more open design, added everything to a single webpage to make it flow better

--- a/about.html
+++ b/about.html
@@ -30,6 +30,8 @@
                 One of my passion projects involves creating a Discord bot for a small community that's used semi regularly, including an sql database for daily coins/interaction. I enjoy building computers, having built the last three I own, and several for friends and family.
             </p>
             <br />
+
+           <!-- End About Page-->
         </div>
     </div>
 </body>
