Updated Dhelves picture to not have black bars and added resume.

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
                     <li class="submenu-item"><a target="_blank" href="assets/papers/ProceduralMapGen.pdf">Procedural Map Generation in Video Games </a></li>
                 </ul>
             </li>
-            <li class="menu-item"><a class="item" href="">Resume</a></li>
+            <li class="menu-item"><a class="item" target="_blank" href="assets/resume.pdf">Resume</a></li>
             <li class="menu-item"><a class="item" href="">Contact</a></li>
         </ul>
     </nav>
 
-    <section id="bg2" class="pagecontainer">
+    <section id="bg2" class="">
         <section id="About">
 
 
@@ -178,7 +178,7 @@
 
                 <div class="card__info ">
                     <a href="https://github.com/rowanlovejoy/pec-project"> <img height="50px" width="50px" src="assets/icons/github.png" alt="Github"> </a>
-                    <a href="#"><button> Learn More </button></a>
+                    <!-- <a href="#"><button> Learn More </button></a> -->
                     <a href="https://youtu.be/peUFRWXIwuk"> <img height="50px" width="50px" src="assets/icons/youtube.png" alt="Youtube"> </a>
                 </div>
             </div>
@@ -204,7 +204,7 @@
 
                 <div class="card__info ">
                     <a href="https://github.com/jack-fletcher/AINT354"> <img height="50px" width="50px" src="assets/icons/github.png" alt="Github"> </a>
-                    <a href="#"><button> Learn More </button></a>
+                    <!-- <a href="#"><button> Learn More </button></a> -->
                     <a href="https://www.youtube.com/embed/fFcQS0qFXKE"> <img height="50px" width="50px" src="assets/icons/youtube.png" alt="Youtube"> </a>
                 </div>
             </div>
@@ -230,7 +230,7 @@
 
                 <div class="card__info ">
                     <a href="https://github.com/jack-fletcher/Endless-Runner"> <img height="50px" width="50px" src="assets/icons/github.png" alt="Github"> </a>
-                    <a href="#"><button> Learn More </button></a>
+                    <!-- <a href="#"><button> Learn More </button></a> -->
                     <a href="https://youtu.be/XqZYr33nLRY"> <img height="50px" width="50px" src="assets/icons/youtube.png" alt="Youtube"> </a>
                 </div>
             </div>
@@ -257,7 +257,7 @@
 
                 <div class="card__info ">
                     <a href="https://github.com/jack-fletcher/Necromancer-Game"> <img height="50px" width="50px" src="assets/icons/github.png" alt="Github"> </a>
-                    <a href="#"><button> Learn More </button></a>
+                    <!-- <a href="#"><button> Learn More </button></a> -->
                     <a href="https://www.youtube.com/embed/fFcQS0qFXKE"> <img height="50px" width="50px" src="assets/icons/youtube.png" alt="Youtube"> </a>
                 </div>
             </div>
@@ -283,7 +283,7 @@
 
                 <div class="card__info ">
                     <a href="https://github.com/jack-fletcher/Necromancer-Game"> <img height="50px" width="50px" src="assets/icons/github.png" alt="Github"> </a>
-                    <a href="#"><button> Learn More </button></a>
+                    <!-- <a href="#"><button> Learn More </button></a> -->
                     <a href="https://www.youtube.com/watch?v=wCudxiSCA3w"> <img height="50px" width="50px" src="assets/icons/youtube.png" alt="Youtube"> </a>
                 </div>
             </div>
@@ -311,7 +311,7 @@
 
                 <div class="card__info ">
                     <a href="https://github.com/jack-fletcher/Sharpbot"> <img height="50px" width="50px" src="assets/icons/github.png" alt="Github"> </a>
-                    <a href="#"><button> Learn More </button></a>
+                    <!-- <a href="#"><button> Learn More </button></a> -->
                 </div>
             </div>
 
@@ -335,7 +335,7 @@
 
                 <div class="card__info ">
                     <a href="https://github.com/jack-fletcher/Jamfuser"> <img height="50px" width="50px" src="assets/icons/github.png" alt="Github"> </a>
-                    <a href="#"><button> Learn More </button></a>
+                    <!-- <a href="#"><button> Learn More </button></a> -->
                 </div>
             </div>
         </div>
